--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,8 +7,8 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/battleground.battleground
-GameDefaultMap=/Game/battleground.battleground
+EditorStartupMap=/Game/_Levels/battleground.battleground
+GameDefaultMap=/Game/_Levels/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Blueprints/tanxGameMode.tanxGameMode_C
 
 [/Script/Engine.PhysicsSettings]
@@ -48,5 +48,3 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
-
